<resources>
    <string name="app_name">PhanTan</string>
    <string name="map_api_key">AIzaSyD4VGpFi-QQ3sXr65sbgUOZ9EVaR2-j08U</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="common_app_finish">Do you want to close the application?</string>
    <string name="common_ok">OK</string>
    <string name="common_cancel">CANCEL</string>
    <string name="maps">Bản đồ</string>
    <string name="list_tree">Danh sách cây</string>
    <string name="schedule">Đặt lịch tưới</string>
    <string name="report_system">Báo lỗi hệ thống</string>
    <string name="log_out">Đăng xuất</string>
    <string name="history_watering">Lịch sử tưới cây</string>
    <string name="tools">Cài đặt</string>
    <string name="change_infor">Cập nhật thông tin cá nhân</string>
    <string name="title_activity_information_tree">InformationTreeActivity</string>
    <string name="name_user">Tên người dùng</string>
    <string name="sex_infor">Giới tính</string>
    <string name="status">Trạng thái</string>
    <string name="password">Thay đổi mật khẩu</string>
    <string name="role">Vai trò</string>
    <string name="bao_cao_su_co">Báo cáo sự cố</string>
    <string name="select_picture_title">select_title</string>
    <string name="list_water_station">Danh sách nguồn nước</string>

</resources>
