<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_maps"
            android:icon="@drawable/icon_maps"
            android:title="@string/maps" />
        <item
            android:id="@+id/item_list_tree"
            android:icon="@drawable/ic_list_tree"
            android:title="@string/list_tree" />
        <item
            android:id="@+id/item_list_waterStation"
            android:icon="@drawable/water_station"
            android:title="@string/list_water_station"
            />
        <item
            android:id="@+id/item_schelude"
            android:icon="@drawable/icon_schedule"
            android:title="@string/schedule" />
        <item
            android:id="@+id/item_history"
            android:icon="@drawable/icon_history"
            android:title="@string/history_watering" />
        <item
            android:id="@+id/item_edit"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/change_infor"
                android:icon="@drawable/icons_edit_profit"
                android:title="@string/change_infor" />
            <item
                android:id="@+id/item_report"
                android:icon="@drawable/icon_report_system"
                android:title="@string/report_system" />
            <item
                android:id="@+id/item_signout"
                android:icon="@drawable/icon_sign_out"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
