<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_avatar_infor"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:src="@drawable/avatar_default" />

            <TextView
                android:id="@+id/tv_name_infor_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_avatar_infor"
                android:gravity="center_horizontal"
                android:paddingTop="5dp"
                android:text="Hong Anh Do"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/text_size_max" />

            <LinearLayout
                android:id="@+id/ln_stt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tv_name_infor_large"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ed_status"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:layout_weight="1.4"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:paddingRight="10dp"
                    android:text="@string/status"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorBlack"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:id="@+id/tv_status_user"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="online" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_below="@+id/ln_stt"
                android:layout_margin="10dp"
                android:background="@drawable/bg_white_corners"
                android:elevation="2dp"
                android:orientation="vertical"
                android:weightSum="4">

                <LinearLayout
                    android:id="@+id/ln_add_item"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_person_black_24dp"
                        android:background="@drawable/bg_green_corners"/>

                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:weightSum="5">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:text="@string/name_user"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/text_size_middle" />

                        <EditText
                            android:id="@+id/tv_name_infor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:background="@null"
                            android:enabled="false"
                            android:text="Hong Anh Do"
                            android:textSize="@dimen/text_size_small" />
                    </LinearLayout>


                    <Button
                        android:id="@+id/btn_edit_name_display"
                        android:layout_width="45dp"
                        android:layout_height="match_parent"
                        android:scaleType="centerInside"
                        android:layout_margin="@dimen/margin_small"
                        android:background="@drawable/ic_edit_black_24dp"/>


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:id="@+id/ln_sex_item"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_green_corners"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_exposure_black_24dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:weightSum="5">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:text="@string/sex_infor"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/text_size_middle" />

                        <TextView
                            android:id="@+id/tv_sex_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="Nữ"
                            android:textSize="@dimen/text_size_small" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:id="@+id/ln_mail_item"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_green_corners"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_work_black_24dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:weightSum="5">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:text="@string/role"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/text_size_middle" />

                        <TextView
                            android:id="@+id/role"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="Nhân viên lao công"
                            android:textSize="@dimen/text_size_small" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_green_corners"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_edit_black_24dp" />

                    <LinearLayout
                        android:id="@+id/ln_change_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:weightSum="5">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="5"
                            android:gravity="center_vertical"
                            android:text="@string/password"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/text_size_middle" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

    </ScrollView>
</RelativeLayout>